samples/InspectionApp/src/Salesforce/objects/GlassSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>App_Email__c</fullName>
        <defaultValue>&quot;781446821827-1q5bh0rur6hei7b6uc4gm4s4r57qit08@developer.gserviceaccount.com&quot;</defaultValue>
        <label>App_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Id__c</fullName>
        <defaultValue>&quot;com.salesforce.glassdemo&quot;</defaultValue>
        <label>App_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <defaultValue>&quot;3MVG9JZ_r.QzrS7g.Ouagr7SVAJB1PykHPThSvUaPbfNF2cL3kXALeErIVSIxBIBbYBTJgfUz8zdmY2f7Hkc5&quot;</defaultValue>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <defaultValue>&quot;7383499845391966918&quot;</defaultValue>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <defaultValue>&quot;https://glass-developer-edition.na10.force.com/glassauth/SalesforceToGoogle&quot;</defaultValue>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Glass Settings</label>
</CustomObject>